# alabaster

./: .flake8  .gitignore  .readthedocs.yml  .ruff.toml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tasks.py
.circleci/: config.yml
.github/workflows/: create-release.yml  docs.yml  lint.yml  test.yml
alabaster/: __init__.py  _version.py  about.html  donate.html  layout.html  navigation.html  support.py  theme.conf
alabaster/static/: alabaster.css_t  flasky.css_t
demo/: Makefile  conf.py  index.rst
demo/_build/doctrees/: environment.pickle  index.doctree  page-1.doctree  pymethod.doctree  table-with-code.doctree
demo/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  page-1.html  pymethod.html  search.html  searchindex.js  table-with-code.html
demo/_build/html/_sources/: index.txt
demo/_build/html/_static/: alabaster.css
docs/: changelog.rst  conf.py  customization.rst  index.rst  installation.rst  requirements.txt
flasky/: __init__.py  intro.html  layout.html  logo.html  sidebar.html  theme.conf
flasky/static/: flasky.css_t
